<resources>
    <string name="app_name">App Teraphy</string>
    <string name="botao_login">Login</string>

    <!-- INFORMAÇÕES DE LOGIN COM FACEBOOK -->
    <string name="facebook_app_id">2024219594544487</string>
    <string name="fb_login_protocol_scheme">fb2024219594544487</string>

    <!-- TIPOS DE USUARIO -->
    <string name="psicologo">Psycologist</string>


    <string name="hint_nome">FirstName</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_telefone">Cellphone</string>
    <string name="hint_cpf">ID</string>
    <string name="hint_informe_sua_senha">Input your password</string>
    <string name="hint_data_nascimento">Date of Birth</string>
    <string name="button_cadastrar">REGISTER</string>
    <string name="title_activity_psicologo_lista">List of Psycologists</string>
    <string name="with_success">with success!</string>
    <string name="txt_user">User</string>
    <string name="success_created">"created successfully "</string>
    <string name="error_create_user">Error creating user</string>
    <string name="psychologist_unisex_therm">Psycologist</string>
    <string name="Date">Date</string>
    <string name="button_save">SAVE</string>
    <string name="button_cancel">CANCEL</string>
    <string name="checkbox_mantenha_me_conectado">Stay connected</string>
    <string name="hint_insira_seu_email">Input your email</string>
    <string name="hint_insira_sua_senha">Input you password</string>
    <string name="botao_cadastrar">REGISTER</string>
    <string name="paciente">Patient</string>
    <string name="text_preencher_dados">" Fill in your registration information"</string>
    <string name="hint_sobrenome">LastName</string>
    <string name="required_fields">All fields are required</string>
    <string name="date_schedule_exame">Scheduled appointment on date</string>
    <string name="error_create_exam">" Error creating a exam"</string>
    <string name="success_delete_exam">" Exam deleted successfully!"</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="button_update">Update</string>
    <string name="hint_address_register">Street, Number - Neighboorhood</string>
    <string name="hint_city">Input your city</string>
    <string name="hint_state">Input your state</string>
    <string name="update_personal_data">Update Personal Data</string>
    <string name="error_server_connect">Server not available!</string>
    <string name="txtCity">City:</string>
    <string name="txtSkills">Skills:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtCelular">Mobile Phone:</string>
    <string name="txtPsycologist">Psycologist:</string>
    <string name="txtDate">Date:</string>
    <string name="txtEvent">Event:</string>
    <string name="txtDateEvent">Date:</string>
    <string name="txtDescriptionEvent">Description:</string>
    <string name="hint_input_event_name">Input event name</string>
    <string name="hint_input_event_date">Event date</string>
    <string name="hint_description">Description</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_confirmation_update_info_user">Confirm perfil information update?</string>
    <string name="dialog_button_ok">OK</string>
    <string name="hint_skills">Skills</string>
    <string name="message_success_data_update">Data updated!</string>
    <string name="message_error_data_not_updated">Error updating data!</string>
    <string name="message_sccuess_event_deleted">Event deleted successfully!</string>
    <string name="number_version">Version number:</string>
    <string name="text_development_by">A product development by App Teraphy Ltda</string>
    <string name="text_developers">Developers</string>
    <string name="txt_dev_joao">JOÃO VICTOR DE SOUZA SANTOS RM331581</string>
    <string name="txt_dev_danillo">DANILLO RAMOS DE CARVALHO BEZERRA RM331866</string>
    <string name="txt_dev_carlos">CARLOS ROBERTO DE CARVALHO JUNIOR RM330658</string>
    <string name="message_error_for_edit_event">Event can be edit by owners only!</string>
</resources>
