<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/actionSearch"
            android:title="@string/action_search"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
            android:id="@+id/actionProfile"
            android:title="@string/action_profile"
            android:visible="true"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_logout"
            android:title="@string/action_logout"
            android:visible="true"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:visible="true"
            app:showAsAction="never" />
</menu>