<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeApplication">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".PerfilActivity"
            android:orientation="vertical">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputNome"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                android:layout_marginRight="8dp"
                android:hint="@string/hint_nome"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputSobrenome"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/inputNome"
                app:layout_constraintStart_toStartOf="@+id/inputNome"
                app:layout_constraintEnd_toEndOf="@+id/inputNome"
                app:layout_constraintHorizontal_bias="0.0"
                android:hint="@string/hint_sobrenome"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_padrao"
                android:ems="10"
                android:id="@+id/inputEmail"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/inputSobrenome"
                app:layout_constraintStart_toStartOf="@+id/inputSobrenome"
                app:layout_constraintEnd_toEndOf="@+id/inputSobrenome"
                android:hint="@string/hint_email"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/inputTelefone"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_telefone"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inputCPF"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_cpf"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/inputTelefone"
                app:layout_constraintStart_toStartOf="@+id/inputTelefone"
                app:layout_constraintEnd_toEndOf="@+id/inputTelefone"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/inputDtNascimento"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_data_nascimento"
                app:layout_constraintTop_toBottomOf="@+id/inputCPF"
                app:layout_constraintStart_toStartOf="@+id/inputCPF"
                app:layout_constraintEnd_toEndOf="@+id/inputCPF"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inputEndereco"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_address_register"
                android:inputType="text"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/inputDtNascimento"
                app:layout_constraintStart_toStartOf="@+id/inputDtNascimento"
                app:layout_constraintEnd_toEndOf="@+id/inputDtNascimento"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inputCidade"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_city"
                android:inputType="text"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/inputEndereco"
                app:layout_constraintStart_toStartOf="@+id/inputEndereco"
                app:layout_constraintEnd_toEndOf="@+id/inputEndereco"
        />
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inputEstado"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_state"
                android:inputType="text"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/inputCidade"
                app:layout_constraintStart_toStartOf="@+id/inputCidade"
                app:layout_constraintEnd_toEndOf="@+id/inputCidade"
        />

        <LinearLayout android:layout_width="380dp"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      app:layout_constraintTop_toBottomOf="@+id/inputEstado"
                      app:layout_constraintStart_toStartOf="@+id/inputEstado"
                      app:layout_constraintEnd_toEndOf="@+id/inputEstado"
                      android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                      android:layout_marginRight="8dp">

            <Button
                    android:text="@string/button_update"
                    style="@style/button_background"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btUpdate"
                    android:layout_margin="8dp"
                    app:layout_constraintHorizontal_bias="1.0"
            />
            <Button
                    android:text="@string/button_cancel"
                    style="@style/button_background"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btCancel"
                    android:layout_margin="8dp"
                    app:layout_constraintHorizontal_bias="1.0"
            />
        </LinearLayout>

        <TextView
                android:text="@string/update_personal_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12sp"
                android:textStyle="bold"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>