<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeApplication">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CadastroActivity"
            android:orientation="vertical">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputNome"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:hint="@string/hint_nome"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/inputSobrenome"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_sobrenome"
                app:layout_constraintTop_toBottomOf="@+id/inputNome"
                app:layout_constraintStart_toStartOf="@+id/inputNome"
                app:layout_constraintEnd_toEndOf="@+id/inputNome"
                app:layout_constraintHorizontal_bias="0.0"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/inputEmail"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_email"
                app:layout_constraintTop_toBottomOf="@+id/inputSobrenome"
                app:layout_constraintStart_toStartOf="@+id/inputSobrenome"
                app:layout_constraintEnd_toEndOf="@+id/inputSobrenome"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/inputTelefone"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_telefone"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inputCPF"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_cpf"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/inputTelefone"
                app:layout_constraintStart_toStartOf="@+id/inputTelefone"
                app:layout_constraintEnd_toEndOf="@+id/inputTelefone"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/inputSenhaCadastro"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_informe_sua_senha"
                android:inputType="textPassword"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/inputSelectTipo"
                app:layout_constraintStart_toStartOf="@+id/inputSelectTipo"
                app:layout_constraintEnd_toEndOf="@+id/inputSelectTipo"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/inputDtNascimento"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/hint_data_nascimento"
                app:layout_constraintTop_toBottomOf="@+id/inputCPF"
                app:layout_constraintStart_toStartOf="@+id/inputCPF"
                app:layout_constraintEnd_toEndOf="@+id/inputCPF"
        />
        <Button
                android:text="@string/button_cadastrar"
                style="@style/button_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCadastrar"
                app:layout_constraintTop_toBottomOf="@+id/inputSenhaCadastro"
                app:layout_constraintStart_toStartOf="@+id/inputSenhaCadastro"
                app:layout_constraintEnd_toEndOf="@+id/inputSenhaCadastro"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
        />
        <TextView
                android:text="@string/text_preencher_dados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

        <Spinner
                android:padding="@dimen/padding_text_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputSelectTipo"
                android:layout_marginTop="@dimen/margin_default"
                android:entries="@array/tipo_usuario"
                app:layout_constraintTop_toBottomOf="@+id/inputDtNascimento"
                app:layout_constraintEnd_toEndOf="@+id/inputDtNascimento"
                app:layout_constraintStart_toStartOf="@+id/inputDtNascimento"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>