<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginRight="8dp"
                                    android:layout_marginTop="8dp" android:scrollbarAlwaysDrawVerticalTrack="true"
                                    android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="4dp">
        <LinearLayout style="@style/LinearLayoutItemsHorizontal" >
            <TextView
                    android:id="@+id/tvLabelEventoNome"
                    style="@style/labelText"
                    android:text="@string/txtEvent" />
            <TextView
                    android:id="@+id/tvEventoNome"
                    style="@style/textViewField"
                    android:text="CONGRESSO CRP"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutItemsHorizontal">
            <TextView
                    android:id="@+id/tvLabelEventoData"
                    style="@style/labelText"
                    android:text="@string/txtDateEvent" />
            <TextView
                    android:id="@+id/tvEventoData"
                    style="@style/textViewField"
                    android:text="10/10/2019"  />
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutItemsHorizontal">
            <TextView
                    android:id="@+id/tvLabelEventoDescricao"
                    style="@style/labelText"
                    android:text="@string/txtDescriptionEvent" />
            <TextView
                    android:id="@+id/tvEventoDescricao"
                    style="@style/textViewField"
                    android:text="A singularidade humana: um diálogo entre a Psicanálise e fenomenologia"  />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>