<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroEventoActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <EditText android:id="@+id/inputNomeEvento"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                  android:hint="@string/hint_input_event_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:id="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="1.0">
        <EditText android:id="@+id/inputDateEvento"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="datetime"
                  android:hint="@string/hint_input_event_date"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:id="@+id/textInputLayout3">
        <EditText android:id="@+id/inputDescricao"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                  android:hint="@string/hint_description"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginLeft="@dimen/margin_default"
                  android:layout_marginStart="@dimen/margin_default"
                  app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                  app:layout_constraintStart_toStartOf="parent">

        <Button android:layout_weight="1"
                android:text="@string/button_save"
                style="@style/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btSalvarEvento"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"/>
        <Button android:layout_weight="1"
                android:text="@string/button_cancel"
                style="@style/button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btCancelarCadEvento"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>